--- a/TypeCheckerGenerator/latex/Semantics.tex
+++ b/TypeCheckerGenerator/latex/Semantics.tex
@@ -58,7 +58,8 @@
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}×\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaFunction{Σ-syntax}\AgdaSymbol{)}\<%
+\AgdaFunction{Σ-syntax}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaField{proj₂}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -83,6 +84,73 @@
 \AgdaSymbol{(}\AgdaDatatype{Failable}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaInductiveConstructor{succeed}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaInductiveConstructor{fail}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Nat}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaPrimitive{\AgdaUnderscore{}+\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≟\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Thinning}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Rules}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaRecord{∋rule}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{typeOf}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{bind-count}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Pattern}\AgdaSpace{}%
+\AgdaKeyword{using}%
+\>[75I]\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∙\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{bind}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{place}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{thing}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaDatatype{svar}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaDatatype{svar-builder}\AgdaSymbol{;}\<%
+\\
+\>[75I][@{}l@{\AgdaIndent{0}}]%
+\>[27]\AgdaInductiveConstructor{X}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{⇚}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{⇛}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{↳}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{build}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{bind-count-bl}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Relation.Nullary}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{yes}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{no}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{¬\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Function}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}∘\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Relation.Binary.PropositionalEquality}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{sym}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{subst}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}≡\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{∋rule}\<%
 \end{code}
 }
 
@@ -95,6 +163,11 @@
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scope}\<%
+\\
+%
+\>[4]\AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scope}\<%
 \\
@@ -168,12 +241,12 @@ a β-rule.
 \>[2]\AgdaFunction{Rule-Env}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[89I]\AgdaSymbol{((}\AgdaBound{γ}\AgdaSpace{}%
+\>[140I]\AgdaSymbol{((}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaField{target}\AgdaSymbol{)}%
 \>[36]\AgdaOperator{\AgdaInductiveConstructor{∙}}\<%
 \\
-\>[89I][@{}l@{\AgdaIndent{0}}]%
+\>[140I][@{}l@{\AgdaIndent{0}}]%
 \>[18]\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaField{targetType}\AgdaSymbol{)}%
@@ -206,9 +279,9 @@ a β-rule.
 \AgdaBound{ty}\AgdaSpace{}%
 \AgdaBound{el}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[111I]\AgdaKeyword{do}\<%
+\>[162I]\AgdaKeyword{do}\<%
 \\
-\>[111I][@{}l@{\AgdaIndent{0}}]%
+\>[162I][@{}l@{\AgdaIndent{0}}]%
 \>[24]\AgdaBound{t-env}%
 \>[31]\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{match}\AgdaSpace{}%
@@ -256,13 +329,13 @@ a β-rule.
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{toTerm}\AgdaSpace{}%
+\AgdaFunction{↞↞}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{toTerm}\AgdaSpace{}%
 \AgdaBound{env}\AgdaSpace{}%
-\AgdaField{redTerm}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaFunction{toTerm}\AgdaSpace{}%
+\AgdaField{redTerm}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{toTerm}\AgdaSpace{}%
 \AgdaBound{env}\AgdaSpace{}%
-\AgdaField{redType}\<%
+\AgdaField{redType}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{β-rule}\<%
@@ -281,11 +354,11 @@ to a list of β-rules by trying to match and apply a rule.
 \begin{code}%
 \>[0]\AgdaFunction{findRule}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[145I]\AgdaDatatype{List}\AgdaSpace{}%
+\>[196I]\AgdaDatatype{List}\AgdaSpace{}%
 \AgdaRecord{β-rule}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[145I]%
+\>[.][@{}l@{}]\<[196I]%
 \>[11]\AgdaSymbol{(}\AgdaBound{tar}\AgdaSpace{}%
 \AgdaBound{type}\AgdaSpace{}%
 \AgdaBound{elim}\AgdaSpace{}%
@@ -314,10 +387,10 @@ to a list of β-rules by trying to match and apply a rule.
 \AgdaBound{e}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{fail}%
-\>[169I]\AgdaSymbol{(}\AgdaString{"No matching β-rule found for "}\AgdaSpace{}%
+\>[220I]\AgdaSymbol{(}\AgdaString{"No matching β-rule found for "}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\<%
 \\
-\>[169I][@{}l@{\AgdaIndent{0}}]%
+\>[220I][@{}l@{\AgdaIndent{0}}]%
 \>[27]\AgdaFunction{print}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
@@ -328,7 +401,7 @@ to a list of β-rules by trying to match and apply a rule.
 \AgdaOperator{\AgdaFunction{++}}\<%
 \\
 %
-\>[27]\AgdaString{"eliminated by "}\AgdaSpace{}%
+\>[27]\AgdaString{" eliminated by "}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
 \AgdaFunction{print}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSymbol{)}\<%
@@ -371,11 +444,11 @@ to a list of β-rules by trying to match and apply a rule.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{reduce}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[208I]\AgdaDatatype{List}\AgdaSpace{}%
+\>[259I]\AgdaDatatype{List}\AgdaSpace{}%
 \AgdaRecord{β-rule}%
 \>[34]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[208I]%
+\>[.][@{}l@{}]\<[259I]%
 \>[9]\AgdaSymbol{(}\AgdaBound{tar}\AgdaSpace{}%
 \AgdaBound{type}\AgdaSpace{}%
 \AgdaBound{elim}\AgdaSpace{}%
@@ -397,9 +470,9 @@ to a list of β-rules by trying to match and apply a rule.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[221I]\AgdaKeyword{do}\<%
+\>[272I]\AgdaKeyword{do}\<%
 \\
-\>[221I][@{}l@{\AgdaIndent{0}}]%
+\>[272I][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{env}\AgdaSymbol{)}\AgdaSpace{}%
@@ -416,36 +489,272 @@ to a list of β-rules by trying to match and apply a rule.
 \AgdaBound{rule}\AgdaSpace{}%
 \AgdaBound{env}\AgdaSymbol{)}\<%
 \end{code}
-
-Finally we define normalization in terms of a list of β-rules but also
-in terms of some function that may infer types for us. In practice we will
-supply our type-inference function (defined later) "pre-loaded" with typing
-rules.
-
-Our approach to normalization is naive. We make a post-order traversal of
-the syntax tree and where processing eliminations, stuck eliminations are
-embedded as "thunk" terms (although the target and eliminator are reduced
-where possible as would be expected in post order traversal), whereas
-reducable eliminations are reduced and the resulting term is also normalized.
-
-As we pass under binders, we must extend the context, however the type of
-the newly bound variable is not known and so the context is extended with
-a special symbol to indicate this. Later we will see that the parser is
-unable to produce this symbol and so it is safe to use for this purpose.
-\hl{make sure this is so}. The type-synthesis process will synthesis the
-type of a variable by looking it up in the context. During this process
-it also checks that what it retrieves from the context is indeed a type.
-Since there cannot exists a type rule for $'⊤'$ \hl{(change)} we cannot
-successfully infer or check the type for the newly bound variable insuring
-that such variables of unknown type cannot involve themselves in
-computation in which they have no right.
-
-\begin{itemize}
-  \item Normalization by evaluation would be more efficient
-  \item The current normalization process has no guarantees w.r.t
-        termination
-\end{itemize}
-
+Finally, we implement normalization by evaluation. We first define an evaluation
+function that works in terms of a generic means of reduction and type synthesis
+then provide our implementation of \emph{reflect} which eta-expands sub-terms of
+the term so that the head of the sub-term matches the constructor of its given
+type. Normalisation is then the composition of these functions - reducing as far
+as possible before building the correct head form at each type. \hl{expand?}
+\hide{
+\begin{code}%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{EtaRule}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{η-Rule}\<%
+\\
+\>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
+\AgdaKeyword{TERMINATING}\AgdaSpace{}%
+\AgdaSymbol{\#-\}}\<%
+\end{code}
+}
+\begin{code}%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}-\AgdaUnderscore{}-\AgdaUnderscore{}∥\AgdaUnderscore{}∥}}%
+\>[289I]\AgdaSymbol{:}%
+\>[12]\AgdaSymbol{(}\AgdaBound{reducer}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{tar}\AgdaSpace{}%
+\AgdaBound{type}\AgdaSpace{}%
+\AgdaBound{elim}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Failable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{Compu}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[289I][@{}l@{\AgdaIndent{0}}]%
+\>[11]\AgdaSymbol{(}\AgdaBound{inferer}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Context}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{term}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaInductiveConstructor{compu}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Failable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\>[11]\AgdaFunction{Context}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\>[11]\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\>[11]\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\<%
+\\
+\>[0]\AgdaBound{rd}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{-}}\AgdaSpace{}%
+\AgdaBound{inf}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{-}}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∥}}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∥}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaBound{Γ}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{where}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Context}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\<%
+\\
+%
+\>[4]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}%
+\>[30]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+%
+\>[4]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}%
+\>[30]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaBound{Γ}\<%
+\\
+%
+\>[4]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}%
+\>[30]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{Context.,}}\AgdaSpace{}%
+\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaString{"unknown"}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{)}\<%
+\\
+%
+\>[4]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}%
+\>[30]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaBound{Γ}\<%
+\\
+%
+\>[4]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}%
+\>[30]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\<%
+\\
+%
+\>[4]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaBound{inf}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{t}\<%
+\\
+%
+\>[4]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{fail}%
+\>[18]\AgdaBound{n}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↞↞}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaString{"unknown"}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSymbol{))}\<%
+\\
+%
+\>[4]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaBound{rd}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSymbol{)}\<%
+\\
+%
+\>[4]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaBound{Γ}\<%
+\\
+%
+\>[4]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{fail}\AgdaSpace{}%
+\AgdaBound{x}%
+\>[20]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↞↞}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSymbol{))}\<%
+\\
+%
+\>[4]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}%
+\>[28]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaBound{Γ}\<%
+\end{code}
 \hide{
 \begin{code}%
 \>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
@@ -454,241 +763,320 @@ computation in which they have no right.
 \end{code}
 }
 \begin{code}%
-\>[0]\AgdaFunction{normalize}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[236I]\AgdaDatatype{List}\AgdaSpace{}%
-\AgdaRecord{β-rule}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-\>[.][@{}l@{}]\<[236I]%
-\>[12]\AgdaSymbol{(∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{δ}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[0]\AgdaFunction{qt}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaRecord{η-Rule}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Context}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{ty}\AgdaSpace{}%
+\AgdaBound{tm}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Compu}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Failable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaDatatype{Const}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{))}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-%
-\>[12]\AgdaFunction{Context}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-%
-\>[12]\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaGeneralizable{γ}%
-\>[22]\AgdaSymbol{→}\<%
-\\
-%
-\>[12]\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\<%
 \\
-\>[0]\AgdaFunction{normalize}\AgdaSpace{}%
-\AgdaBound{rs}\AgdaSpace{}%
-\AgdaBound{infer}\AgdaSpace{}%
+\>[0]\AgdaFunction{qt}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{γ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{norm}\<%
+\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{rs}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSpace{}%
+\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaFunction{EtaRule.findRule}\AgdaSpace{}%
+\AgdaBound{rs}\AgdaSpace{}%
+\AgdaBound{ty}\<%
+\\
+\>[0]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{fail}\AgdaSpace{}%
+\AgdaBound{x}%
+\>[16]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{v}\<%
+\\
+\>[0]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{r}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{i}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{helper}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{i}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{eliminations}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaInductiveConstructor{X}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{eliminations}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{where}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaFunction{norm}\AgdaSpace{}%
+\>[4]\AgdaFunction{helper}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[517I]\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{γ'}\AgdaSymbol{\}\{}\AgdaBound{q}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Context}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Const}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\<%
+\AgdaDatatype{Pattern}\AgdaSpace{}%
+\AgdaBound{γ'}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[.][@{}l@{}]\<[517I]%
+\>[13]\AgdaSymbol{((}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
+\AgdaField{input}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{checkRule}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{subject}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{checkRule}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSymbol{))))}\AgdaOperator{\AgdaDatatype{-Env}}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
 \\
 %
-\>[4]\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}%
-\>[34]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{-,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaString{"unknown"}\AgdaSpace{}%
-\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}\<%
+\>[13]\AgdaSymbol{(}\AgdaBound{v}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{svar-builder}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{subject}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{checkRule}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSymbol{)))}\AgdaSpace{}%
+\AgdaBound{q}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
 \\
 %
-\>[4]\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\>[13]\AgdaBound{q}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{-Env}}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\>[13]\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaFunction{bind-count-bl}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSymbol{)}\<%
+\\
+%
+\>[4]\AgdaFunction{helper}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{γ'}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{γ'}\AgdaSymbol{\}\{}\AgdaArgument{q}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{q}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{i}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSpace{}%
+\AgdaBound{elims}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
-\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSpace{}%
+\AgdaBound{q}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
-\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{e}\<%
+\AgdaBound{elims}\<%
 \\
 %
 \>[4]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaInductiveConstructor{`}\AgdaSpace{}%
 \AgdaBound{x}%
-\>[19]\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaBound{e'}\AgdaSpace{}%
+\>[18]\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{`}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaBound{e'}\AgdaSymbol{)}\<%
-\\
-%
-\>[4]\AgdaCatchallClause{\AgdaSymbol{...}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{t'}}%
-\>[19]\AgdaCatchallClause{\AgdaSymbol{|}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{e'}}\AgdaSpace{}%
-\AgdaKeyword{with}\AgdaSpace{}%
-\AgdaBound{infer}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{t}\<%
-\\
-%
-\>[4]\AgdaSymbol{...}%
-\>[12]\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{fail}\AgdaSpace{}%
-\AgdaBound{x}%
-\>[25]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSpace{}%
-\AgdaBound{e'}\AgdaSymbol{)}%
-\>[46]\AgdaComment{-- should never happen}\<%
-\\
-%
-\>[4]\AgdaSymbol{...}%
-\>[12]\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
-\AgdaBound{ty}\AgdaSpace{}%
-\AgdaKeyword{with}\AgdaSpace{}%
-\AgdaFunction{reduce}\AgdaSpace{}%
-\AgdaBound{rs}\AgdaSpace{}%
-\AgdaBound{t'}\AgdaSpace{}%
-\AgdaBound{ty}\AgdaSpace{}%
-\AgdaBound{e'}\<%
-\\
-%
-\>[4]\AgdaSymbol{...}%
-\>[16]\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{fail}\AgdaSpace{}%
-\AgdaBound{x}%
-\>[28]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t'}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{ty}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{e'}\AgdaSymbol{)}\<%
-\\
-%
-\>[4]\AgdaSymbol{...}%
-\>[16]\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{x}\<%
-\end{code}
-\hide{
-\begin{code}%
-%
-\>[4]\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
-\>[34]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{`}\AgdaSpace{}%
 \AgdaBound{x}\<%
 \\
 %
-\>[4]\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
+\>[4]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaBound{ps}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}%
-\>[34]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSpace{}%
+\AgdaBound{pt}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaBound{es}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{t}\<%
+\AgdaBound{et}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{helper}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{i}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{⇚}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{es}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaFunction{helper}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{i}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{⇛}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{et}\<%
 \\
 %
-\>[4]\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
-\>[34]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{x}\<%
+\>[4]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaBound{pt}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaBound{et}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{helper}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{i}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↳}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{et}\AgdaSymbol{)}\<%
 \\
 %
-\>[4]\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
-\>[34]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\<%
+\>[4]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{place}\AgdaSpace{}%
+\AgdaBound{θ}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{thing}\AgdaSpace{}%
+\AgdaBound{el}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaFunction{bind-count}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{build}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{≟}}\AgdaSpace{}%
+\AgdaBound{γ'}\<%
 \\
 %
-\>[4]\AgdaFunction{norm}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\>[4]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{no}\AgdaSpace{}%
+\AgdaBound{¬p}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaString{"Fuck it! It's impossible."}\<%
+\\
+%
+\>[4]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}%
+\>[627I]\AgdaInductiveConstructor{yes}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{qt}\AgdaSpace{}%
+\AgdaBound{rs}\<%
+\\
+\>[.][@{}l@{}]\<[627I]%
+\>[10]\AgdaSymbol{(}\AgdaFunction{typeOf}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{checkRule}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{build}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{i}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\<%
+\\
+%
+\>[10]\AgdaSymbol{(}\AgdaFunction{subst}\AgdaSpace{}%
+\AgdaSymbol{(λ}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{sym}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaBound{el}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟨term}}\AgdaSpace{}%
+\AgdaBound{θ}\AgdaSymbol{)))}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[649I]\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaRecord{η-Rule}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[649I][@{}l@{\AgdaIndent{0}}]%
+\>[13]\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaRecord{β-rule}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\>[13]\AgdaSymbol{(}\AgdaBound{inferer}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Context}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{term}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaInductiveConstructor{compu}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Failable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\>[13]\AgdaFunction{Context}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\>[13]\AgdaSymbol{(}\AgdaBound{type}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSymbol{)}%
+\>[32]\AgdaSymbol{→}\<%
+\\
+%
+\>[13]\AgdaSymbol{(}\AgdaBound{term}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSymbol{)}%
+\>[32]\AgdaSymbol{→}\<%
+\\
+%
+\>[13]\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\<%
+\\
+\>[0]\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaBound{ηs}\AgdaSpace{}%
+\AgdaBound{βs}\AgdaSpace{}%
+\AgdaBound{inf}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSymbol{)}%
-\>[34]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{norm}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{qt}\AgdaSpace{}%
+\AgdaBound{ηs}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∘}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{reduce}\AgdaSpace{}%
+\AgdaBound{βs}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{-}}\AgdaSpace{}%
+\AgdaBound{inf}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{-}}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{t}\<%
+\AgdaOperator{\AgdaFunction{∥\AgdaUnderscore{}∥}}\AgdaSymbol{)}\<%
 \end{code}
-}
