--- a/TypeCheckerGenerator/latex/TypeChecker.tex
+++ b/TypeCheckerGenerator/latex/TypeChecker.tex
@@ -15,19 +15,6 @@
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Pattern}\AgdaSpace{}%
-\AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{⊗-identityʳ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
-\AgdaKeyword{REWRITE}\AgdaSpace{}%
-\AgdaFunction{⊗-identityʳ}\AgdaSpace{}%
-\AgdaSymbol{\#-\}}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
-\AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{CoreLanguage}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
@@ -65,6 +52,7 @@
 \AgdaModule{Rules}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Pattern}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaDatatype{Pattern}\AgdaSymbol{;}\AgdaSpace{}%
@@ -133,6 +121,12 @@
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Semantics}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{EtaRule}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaRecord{η-Rule}\AgdaSymbol{)}\<%
 \end{code}
 }
 \hide{
@@ -216,11 +210,11 @@ that we might easily pass them around. We do so will the following type.
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaInductiveConstructor{rs}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[115I]\AgdaDatatype{List}\AgdaSpace{}%
+\>[113I]\AgdaDatatype{List}\AgdaSpace{}%
 \AgdaRecord{TypeRule}%
 \>[22]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[115I]%
+\>[.][@{}l@{}]\<[113I]%
 \>[7]\AgdaDatatype{List}\AgdaSpace{}%
 \AgdaRecord{UnivRule}%
 \>[22]\AgdaSymbol{→}\<%
@@ -238,6 +232,11 @@ that we might easily pass them around. We do so will the following type.
 %
 \>[7]\AgdaDatatype{List}\AgdaSpace{}%
 \AgdaRecord{β-rule}%
+\>[22]\AgdaSymbol{→}\<%
+\\
+%
+\>[7]\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaRecord{η-Rule}%
 \>[22]\AgdaSymbol{→}\<%
 \\
 %
@@ -350,11 +349,11 @@ fail with a descriptive error.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{elim-synth}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[143I]\AgdaFunction{Context}\AgdaSpace{}%
+\>[142I]\AgdaFunction{Context}\AgdaSpace{}%
 \AgdaGeneralizable{γ}%
 \>[42]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[143I]%
+\>[.][@{}l@{}]\<[142I]%
 \>[13]\AgdaDatatype{RuleSet}%
 \>[44]\AgdaSymbol{→}\<%
 \\
@@ -389,9 +388,9 @@ fail with a descriptive error.
 We define a notion of equivalence of terms that we will need in order
 to embed inferrable terms into checkable terms. This process involves
 synthesizing a type for a term before ascertaining if it is equivalent
-to the type we are checking the term at. For now, this is a
-purely syntactic action. Later when we implement operational semantics
-we will involve a more sophisticated notion here.
+to the type we are checking the term at. This is a purely syntactic action.
+If terms are to have their normal forms compared then they must be
+normalized before checking their equivalence here.
 
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≡v\AgdaUnderscore{}}}\AgdaSpace{}%
@@ -500,9 +499,9 @@ we will involve a more sophisticated notion here.
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
 \AgdaBound{x₃}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[227I]\AgdaKeyword{do}\<%
+\>[226I]\AgdaKeyword{do}\<%
 \\
-\>[227I][@{}l@{\AgdaIndent{0}}]%
+\>[226I][@{}l@{\AgdaIndent{0}}]%
 \>[36]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaBound{x}%
@@ -564,9 +563,9 @@ we will involve a more sophisticated notion here.
 \AgdaBound{e'}\AgdaSpace{}%
 \AgdaBound{s'}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[267I]\AgdaKeyword{do}\<%
+\>[266I]\AgdaKeyword{do}\<%
 \\
-\>[267I][@{}l@{\AgdaIndent{0}}]%
+\>[266I][@{}l@{\AgdaIndent{0}}]%
 \>[40]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
@@ -593,9 +592,9 @@ we will involve a more sophisticated notion here.
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{T'}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[285I]\AgdaKeyword{do}\<%
+\>[284I]\AgdaKeyword{do}\<%
 \\
-\>[285I][@{}l@{\AgdaIndent{0}}]%
+\>[284I][@{}l@{\AgdaIndent{0}}]%
 \>[35]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
@@ -728,11 +727,11 @@ which we are currently operating.
 \begin{code}%
 \>[0]\AgdaFunction{check-premise}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[322I]\AgdaFunction{Context}\AgdaSpace{}%
+\>[321I]\AgdaFunction{Context}\AgdaSpace{}%
 \AgdaGeneralizable{γ}%
 \>[28]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[322I]%
+\>[.][@{}l@{}]\<[321I]%
 \>[16]\AgdaDatatype{RuleSet}%
 \>[30]\AgdaSymbol{→}\<%
 \\
@@ -779,9 +778,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[346I]\AgdaKeyword{do}\<%
+\>[345I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[346I]%
+\>[.][@{}l@{}]\<[345I]%
 \>[4]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{check}\AgdaSpace{}%
@@ -824,7 +823,8 @@ which we are currently operating.
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
-\AgdaBound{β}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSpace{}%
+\AgdaBound{η}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{penv}\AgdaSpace{}%
 \AgdaBound{qenv}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{type}\AgdaSpace{}%
@@ -863,7 +863,13 @@ which we are currently operating.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{check-premise}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{rules}\AgdaSpace{}%
+\AgdaBound{rules}\AgdaSymbol{@(}\AgdaInductiveConstructor{rs}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSpace{}%
+\AgdaBound{∋}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSpace{}%
+\AgdaBound{η}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{penv}\AgdaSpace{}%
 \AgdaBound{qenv}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
@@ -872,24 +878,38 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[410I]\AgdaKeyword{do}\<%
+\>[416I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[410I]%
-\>[4]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
-\AgdaFunction{toTerm}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaNumber{0}\AgdaSymbol{\}}%
-\>[24]\AgdaBound{penv}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{≡ᵗ}}\AgdaSpace{}%
-\AgdaFunction{toTerm}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaNumber{0}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[416I]%
+\>[4]\AgdaSymbol{\AgdaUnderscore{}}%
+\>[417I]\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaBound{η}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{infer}\AgdaSpace{}%
+\AgdaBound{rules}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaString{"unknown"}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{toTerm}\AgdaSpace{}%
 \AgdaBound{penv}\AgdaSpace{}%
-\AgdaBound{x'}\<%
+\AgdaBound{x}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[417I]%
+\>[6]\AgdaOperator{\AgdaFunction{≡ᵗ}}\<%
+\\
+%
+\>[6]\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaBound{η}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{infer}\AgdaSpace{}%
+\AgdaBound{rules}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaString{"unknown"}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{toTerm}\AgdaSpace{}%
+\AgdaBound{penv}\AgdaSpace{}%
+\AgdaBound{x'}\AgdaSymbol{)}\<%
 \\
 %
 \>[4]\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
@@ -904,7 +924,8 @@ which we are currently operating.
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
-\AgdaBound{β}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSpace{}%
+\AgdaBound{η}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{penv}\AgdaSpace{}%
 \AgdaBound{qenv}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{univ}\AgdaSpace{}%
@@ -912,9 +933,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[438I]\AgdaKeyword{do}\<%
+\>[454I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[438I]%
+\>[.][@{}l@{}]\<[454I]%
 \>[4]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{univ-check}\AgdaSpace{}%
@@ -948,9 +969,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[463I]\AgdaKeyword{do}\<%
+\>[479I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[463I]%
+\>[.][@{}l@{}]\<[479I]%
 \>[4]\AgdaSymbol{(}\AgdaBound{p'env}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{q'env}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1054,9 +1075,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[1]\AgdaSymbol{=}%
-\>[516I]\AgdaKeyword{do}\<%
+\>[532I]\AgdaKeyword{do}\<%
 \\
-\>[516I][@{}l@{\AgdaIndent{0}}]%
+\>[532I][@{}l@{\AgdaIndent{0}}]%
 \>[5]\AgdaSymbol{(}\AgdaBound{p'env}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{q₁env}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1154,24 +1175,25 @@ the output of running the elimination rule.
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
-\AgdaBound{β}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSpace{}%
+\AgdaBound{η}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{rule}\AgdaSpace{}%
 \AgdaBound{ienv}\AgdaSpace{}%
 \AgdaBound{senv}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[559I]\AgdaKeyword{do}\<%
+\>[576I]\AgdaKeyword{do}\<%
 \\
-\>[559I][@{}l@{\AgdaIndent{0}}]%
+\>[576I][@{}l@{\AgdaIndent{0}}]%
 \>[5]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{type-check}%
-\>[562I]\AgdaBound{Γ}\AgdaSpace{}%
+\>[579I]\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSpace{}%
 \AgdaBound{t}\<%
 \\
-\>[.][@{}l@{}]\<[562I]%
+\>[.][@{}l@{}]\<[579I]%
 \>[20]\AgdaSymbol{(}\AgdaFunction{termFrom}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{input}\AgdaSpace{}%
 \AgdaBound{rule}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1180,13 +1202,13 @@ the output of running the elimination rule.
 %
 \>[5]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}%
-\>[569I]\AgdaFunction{check-premise-chain}\AgdaSpace{}%
+\>[586I]\AgdaFunction{check-premise-chain}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSpace{}%
 \AgdaBound{ienv}\AgdaSpace{}%
 \AgdaBound{senv}\<%
 \\
-\>[569I][@{}l@{\AgdaIndent{0}}]%
+\>[586I][@{}l@{\AgdaIndent{0}}]%
 \>[20]\AgdaSymbol{(}\AgdaFunction{⊗premises}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{proj₂}\AgdaSpace{}%
@@ -1201,11 +1223,11 @@ the output of running the elimination rule.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{run-erule}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[580I]\AgdaFunction{Context}\AgdaSpace{}%
+\>[597I]\AgdaFunction{Context}\AgdaSpace{}%
 \AgdaGeneralizable{γ}%
 \>[44]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[580I]%
+\>[.][@{}l@{}]\<[597I]%
 \>[12]\AgdaDatatype{RuleSet}%
 \>[46]\AgdaSymbol{→}\<%
 \\
@@ -1247,18 +1269,18 @@ the output of running the elimination rule.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[602I]\AgdaKeyword{do}\<%
+\>[619I]\AgdaKeyword{do}\<%
 \\
-\>[602I][@{}l@{\AgdaIndent{0}}]%
+\>[619I][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaBound{p'env}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}%
-\>[604I]\AgdaFunction{check-premise-chain}\AgdaSpace{}%
+\>[621I]\AgdaFunction{check-premise-chain}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSpace{}%
 \AgdaBound{T-env}\AgdaSpace{}%
 \AgdaBound{s-env}\<%
 \\
-\>[604I][@{}l@{\AgdaIndent{0}}]%
+\>[621I][@{}l@{\AgdaIndent{0}}]%
 \>[20]\AgdaSymbol{(}\AgdaFunction{⊗premises}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{proj₂}\AgdaSpace{}%
@@ -1313,15 +1335,16 @@ while constructing this system of functions.
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
-\AgdaBound{β}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSpace{}%
+\AgdaBound{η}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{rule}\AgdaSpace{}%
 \AgdaBound{env}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[647I]\AgdaKeyword{do}\<%
+\>[665I]\AgdaKeyword{do}\<%
 \\
-\>[647I][@{}l@{\AgdaIndent{0}}]%
+\>[665I][@{}l@{\AgdaIndent{0}}]%
 \>[5]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{type-check}\AgdaSpace{}%
@@ -1382,9 +1405,9 @@ while constructing this system of functions.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[692I]\AgdaKeyword{do}\<%
+\>[710I]\AgdaKeyword{do}\<%
 \\
-\>[692I][@{}l@{\AgdaIndent{0}}]%
+\>[710I][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{check-premise-chain}\AgdaSpace{}%
@@ -1654,14 +1677,15 @@ while constructing this system of functions.
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
 \AgdaBound{ee}\AgdaSpace{}%
-\AgdaBound{β}\AgdaSymbol{)}%
-\>[875I]\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{β}%
+\>[893I]\AgdaBound{η}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}%
-\>[41]\AgdaSymbol{=}\AgdaSpace{}%
+\>[43]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[875I]%
+\>[893I][@{}l@{\AgdaIndent{0}}]%
 \>[28]\AgdaComment{-- check postcondition:}\<%
 \\
 \>[28][@{}l@{\AgdaIndent{0}}]%
@@ -1687,15 +1711,16 @@ while constructing this system of functions.
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
 \AgdaBound{ee}\AgdaSpace{}%
-\AgdaBound{β}\AgdaSymbol{)}%
-\>[896I]\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{β}%
+\>[915I]\AgdaBound{η}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
 \AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{do}\<%
 \\
-\>[896I][@{}l@{\AgdaIndent{0}}]%
+\>[915I][@{}l@{\AgdaIndent{0}}]%
 \>[29]\AgdaBound{T}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{infer}\AgdaSpace{}%
@@ -1732,18 +1757,19 @@ while constructing this system of functions.
 \>[0]\AgdaFunction{infer}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSymbol{@(}\AgdaInductiveConstructor{rs}\AgdaSpace{}%
 \AgdaBound{tr}%
-\>[923I]\AgdaBound{u}\AgdaSpace{}%
+\>[943I]\AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
-\AgdaBound{β}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSpace{}%
+\AgdaBound{η}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{T}\AgdaSymbol{)}%
-\>[39]\AgdaSymbol{=}\AgdaSpace{}%
+\>[41]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[923I]%
+\>[.][@{}l@{}]\<[943I]%
 \>[19]\AgdaComment{-- postcondition checks in ∋-check}\<%
 \\
 %
@@ -1785,7 +1811,8 @@ while constructing this system of functions.
 \AgdaCatchallClause{\AgdaBound{u}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{∋}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{e}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{β}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{β}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{η}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{Γ}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{T}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{t}}\AgdaSpace{}%
@@ -1801,18 +1828,19 @@ while constructing this system of functions.
 \AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSymbol{@(}\AgdaInductiveConstructor{rs}%
-\>[973I]\AgdaBound{tr}\AgdaSpace{}%
+\>[995I]\AgdaBound{tr}\AgdaSpace{}%
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
-\AgdaBound{β}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSpace{}%
+\AgdaBound{η}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{T}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[973I]%
+\>[.][@{}l@{}]\<[995I]%
 \>[28]\AgdaBound{S}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{infer}\AgdaSpace{}%
@@ -1821,8 +1849,28 @@ while constructing this system of functions.
 \AgdaBound{t}\<%
 \\
 %
-\>[28]\AgdaBound{S}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{≡ᵗ}}\AgdaSpace{}%
+\>[28]\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaBound{η}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{infer}\AgdaSpace{}%
+\AgdaBound{rules}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaString{"Type"}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{S}\<%
+\\
+\>[28][@{}l@{\AgdaIndent{0}}]%
+\>[30]\AgdaOperator{\AgdaFunction{≡ᵗ}}\<%
+\\
+%
+\>[30]\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaBound{η}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{infer}\AgdaSpace{}%
+\AgdaBound{rules}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaString{"Type"}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{T}\<%
 \end{code}
 }
